--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,7 @@ githubAIP:
   Client_id: "c031f623a15031c6a352"
   Client_secret: "7d60deec729cb48b11dbda62def75ced6031e52b"
   Redirect_uri: "http://localhost:8088/callback"
+
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
