添加代码生成器，数据库操作的代码再也不手写啦 修复相关的依赖，以及新出的bug

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,5 @@ githubAIP:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: "cn.iotlearn.community.model"
